# cub3d

./: CMakeLists.txt  Makefile  Makefile.gen  Makefile.mk  README.md  a.out  additional_ft.c  check_clr.c  check_map.c  checks.c  cub3d.h  cube3  cube3d  ft_cub_init.c  ft_parser.c  main.c  map.cub  map1.cub  map3.cub  memory_work.c  parse_path.c  search_map.c  test.xpm
a.out.dSYM/Contents/Resources/DWARF/: a.out
get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
include/: cub3d.h  define_error.h
libft/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  (+4 more)
maps/: map1.cub  map1linux.cub  map2.cub  mapForMac.cub
srcs/: additional_ft.c  check_map.c  checks.c  draw_addition.c  draw_sprite.c  draw_wall.c  ft_parser.c  ft_write_error.c  get_texture.c  global_draw.c  key_map.c  main  main.c  main1.c  memory_work.c  move_left_right.c  move_player.c  parse_path.c  screenshot.c  search_map.c  turn_player.c
test/: Makefile.gen  Makefile.mk  mlx-test
textures/: barrel.xpm  bluestone.xpm  greystone.xpm
